--- a/index.html
+++ b/index.html
@@ -13,11 +13,36 @@
 <body>
 <!-- Header section -->
     <header>
-       <a href="./index.html">
+        <a href="./index.html">
         Simply chocolate
         <img src="./images/header/logo.svg
         " alt="Simply chocolate logo">
-       </a>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#how">How it’s made?</a>
+                </li>
+                <li>
+                    <a href="#reviews">Chocolate is loved</a>
+                </li>
+            </ul>
+        </nav>
+        <ul>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener noroferre">
+                    <img src="./images/header/instagram.logo.svg" alt="Instagram logo" width="24" height="24">
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener noroferre">
+                    <img src="./images/header/twitter.logo.svg" alt="Twitter logo" width="24" height="24">
+                </a>
+            </li>
+        </ul>
     </header>
 <!-- Main block -->
     <main>
@@ -25,19 +50,59 @@
         <section>
             <h1>Treat yourself or a loved one to our finest ingredients for a moment of pure delight!</h1>
             <a href="">Buy now</a>
-            <a href="#how">How it’s made</a>
+            <a href="">How it’s made</a>
+
         </section>
     <!-- Benefits section -->
-        <section></section>
-    <!-- Ingredients for chocolate section -->
-        <section></section>
-    <!-- How it`s made section -->
         <section>
-            <h2 id="how">how it’s made?</h2>
+            <ul>
+                <li>
+                    <h3>Unsurpassed taste</h3>
+                    <p>Crafted with the finest quality cocoa beans and a dedication to perfection, each bite is a decadent experience that simply cannot be matched. Savor the richness and complexity of our Unsurpassed Taste and discover a new level of chocolate bliss.</p>
+                </li>
+                <li>
+                    <h3>Affordable price</h3>
+                    <p>Indulge in high-quality chocolate without breaking the bank with Simply Chocolate's selection of affordable treats. Enjoy mouth-watering truffles and velvety chocolate bars without sacrificing taste or quality. Browse our selection and indulge in affordable luxury today.</p>
+                </li>
+                <li>
+                    <h3>Own production</h3>
+                    <p>We take pride in our own production process, ensuring that every step is carefully crafted to perfection. From selecting the finest ingredients to handcrafting each piece, our attention to detail is evident in every bite.</p>
+                </li>
+            </ul>
         </section>
-
+    <!-- Ingredients for chocolate section -->
+        <section>
+            <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
+            <p>
+                At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing of the
+            finest ingredients to the careful crafting of each individual piece, every step of our process adds up to one
+            exceptional taste sensation.
+            </p>
+            <ul>
+                <li>
+                    <img src="./images/ingredients/milk-chocolate.png" alt="Milk chocolate">
+                    <h3>Milk chocolate</h3>
+                </li>
+                <li>
+                    <img src="./images/ingredients/milk.png" alt="Milk">
+                    <h3>Milk</h3>
+                </li>
+                <li>
+                    <img src="./images/ingredients/nuts.png" alt="Nuts">
+                    <h3>Nuts</h3>
+                </li>
+                <li>
+                    <img src="./images/ingredients/semi-sweet-chocolate.png" alt="Semi Sweet Chocolate">
+                    <h3>Semi Sweet Chocolate</h3>
+                </li>
+            </ul>
+        </section>
+    <!-- How it`s made section -->
+        <section id="how">
+            <h2>how it’s made?</h2>
+        </section>
     <!-- Reviews section -->
-        <section></section>
+        <section id="reviews"></section>
     </main>
 <!-- Footer section -->
     <footer></footer>
